Day 1: Added table, form and footer section

--- a/git-practice/day-01-html/index.html
+++ b/git-practice/day-01-html/index.html
@@ -24,5 +24,44 @@
 
     <h4>My profile picture</h4>
     <img src="https://via.placeholder.com/200" alt="profile image">
+
+    <h1>My Weekly Study Plan</h1>
+    <table border="1">
+        <tr>
+            <th>Day</th>
+            <th>Topics</th>
+            <th>hours</th>
+        </tr>
+        <tr>
+            <td>Monday</td>
+            <td>Html</td>
+            <td>2</td>
+        </tr>
+        <tr>
+            <td>Tuesday</td>
+            <td>Css</td>
+            <td>2</td>
+        </tr>
+        <tr>
+            <td>Wednesday</td>
+            <td>Javasript</td>
+            <td>3</td>
+        </tr>
+        
+        <h1>Contact Me</h1>
+        <form>
+            <label>Name:</label><br>
+            <input type="text" placeholder="Enter Your Name"><br><br>
+
+            <label>Email:</label><br>
+            <input type="email" placeholder="Enter Your Email"><br><br>
+
+            <input type="Submit" value="submit">
+        </form>
+
+        <footer>
+            <hr><p>@2026 | 30-Day Frontend Challenge</p>
+        </footer>
+    </table>
 </body>
 </html>
