Day 4: CSS box model and positioning concepts

--- a/git-practice/day-02-html/index.html
+++ b/git-practice/day-02-html/index.html
@@ -47,13 +47,13 @@
             <h2>Registration Form</h2>
             <form>
                 <label>Full Name:</label><br>
-                <input type="text" required><br><br>
+                <input type="text" required placeholder="Full Name"><br><br>
 
-                <label>EmailL:</label><br>
-                <input type="email" required><br><br>
+                <label>Email:</label><br>
+                <input type="email" required placeholder="Email"><br><br>
 
                 <label>Password:</label><br>
-                <input type="password" required><br><br>
+                <input type="password" placeholder="password" required><br><br>
 
                 <label>Gender:</label><br>
                 <input type="radio" required>Male
