--- a/git-practice/day-04-css/index.html
+++ b/git-practice/day-04-css/index.html
@@ -4,11 +4,55 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        body{
+            font-family: Arial, Helvetica, sans-serif;
+            background-color: #f0f2f5;
+            padding: 30px;
+        }
+        h1{
+            text-align: center;
+        }
+        .box{
+            width: 250px;
+            background-color: white;
+            padding: 20px;
+            border: 5px solid #3498db;
+            margin: 20px auto;
+            text-align: center;
+        }
+        .inline-box{
+            display: inline-block;
+            background-color: #2ecc71;
+            padding: 15px;
+            margin: 10px;
+            color: white;
+        }
+        .relative-box{
+            position: relative;
+            background-color: #f39c12;
+            padding: 20px;
+            margin-top: 40px;
+        }
+        .absolute-box{
+            position: absolute;
+            top: 10px;
+            right: 10px;
+            background-color: red;
+            color: white;
+            padding: 10px;
+        }
+        footer{
+            margin: 60px;
+            text-align: center;
+            color: gray;
+        }
+    </style>
 </head>
 <body>
-    <h1>Day 4 CSS Box MOdel & Positioning</h1>
+    <h1>Day 4 CSS Box Model & Positioning</h1>
     <div class="boox">
-        <p>This bx shows padding, border, and margin.</p>
+        <p>This box shows padding, border, and margin.</p>
     </div>
 
     <h2>Display Property Example</h2>
